Updated Spanish translation

--- a/po/es.po
+++ b/po/es.po
@@ -5,8 +5,8 @@ msgstr ""
 "Project-Id-Version: gnome-color-manager\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
 "color-manager\n"
-"POT-Creation-Date: 2010-03-08 20:46+0000\n"
-"PO-Revision-Date: 2010-03-09 00:06+0100\n"
+"POT-Creation-Date: 2010-03-09 00:55+0000\n"
+"PO-Revision-Date: 2010-03-09 19:58+0100\n"
 "Last-Translator: Jorge González <jorgegonz@svn.gnome.org>\n"
 "Language-Team: Español <gnome-es-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -77,8 +77,8 @@ msgid ""
 "use to convert true color to screen color."
 msgstr ""
 "Si está establecido a cierto entonces se establecerá la sugerencia "
-"__ICC_PROFILE, qué aplicaciones usar para convertir el color real en color "
-"en pantalla."
+"__ICC_PROFILE que usan las aplicaciones para convertir el color real en "
+"color en pantalla."
 
 #: ../data/gnome-color-manager.schemas.in.h:4
 msgid ""
@@ -135,11 +135,6 @@ msgstr ""
 "La gamma predeterminada que usar con monitores sin valor previo configurado."
 
 #: ../data/gnome-color-manager.schemas.in.h:14
-#| msgid ""
-#| "The length of calibration, as this is proportional to the accuracy. The "
-#| "option 'short' creates a quick profile, 'normal' a regular one, and "
-#| "'long' takes a really long time, but is more precise and creates a better "
-#| "profile. Use 'ask' if the want the user to choose."
 msgid ""
 "The length of calibration, as this is proportional to the accuracy. The "
 "option 'short' creates a quick profile, 'normal' a regular one, and 'long' "
@@ -987,10 +982,6 @@ msgstr ""
 
 #. TRANSLATORS: message text, telling the user they are in for the long haul
 #: ../src/gcm-calibrate-manual.c:225
-#| msgid ""
-#| "This dialog will help calibrate your display and create a custom ICC "
-#| "profile. The calibration will involve several steps so that an accurate "
-#| "profile can be obtained. It should only take a few minutes."
 msgid ""
 "The calibration will involve several steps so that an accurate profile can "
 "be obtained."
